<resources>
    <string name="app_name">PentBrukt</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="password">Passord</string>
    <string name="email">Email</string>
    <string name="login">Logg inn</string>
    <string name="logg_inn">Logg inn</string>
    <string name="new_user">Ny bruker</string>
    <string name="register_button">Registrér!</string>
    <string name="already_registered_login">Allerede registrert? Logg inn!</string>
    <string name="firstname">Fornavn</string>
    <string name="lastname">Etternavn</string>
    <string name="repeat_password">Gjenta passord</string>
    <string name="I_accept_terms">Jeg godkjenner Pentbrukt\'s vilkår</string>
    <string name="not_registered">Ikke registrert? Gjør det her!</string>
    <string name="welcome_message">Velkommen!</string>
    <string name="Beskrivelse">description</string>
    <string name="price">price</string>


</resources>