<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="50dp"
    tools:context=".MainActivity">

    <EditText
    android:id="@+id/first_name"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:hint="@string/firstname"
    android:textColor="@color/colorAccentWhite"
    android:textColorHint="@color/colorAccentWhite"
    android:textStyle="italic"
    android:textSize="15sp"
    android:fontFamily="sans-serif-condensed"/>

    <EditText
        android:id="@+id/last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@id/first_name"
        android:hint="@string/lastname"
        android:textColor="@color/colorAccentWhite"
        android:textColorHint="@color/colorAccentWhite"
        android:textStyle="italic"
        android:textSize="15sp"
        android:fontFamily="sans-serif-condensed"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@id/last_name"
        android:hint="@string/email"
        android:textColor="@color/colorAccentWhite"
        android:textColorHint="@color/colorAccentWhite"
        android:textStyle="italic"
        android:textSize="15sp"
        android:fontFamily="sans-serif-condensed"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_centerInParent="true"
        android:hint="@string/password"
        android:textColor="@color/colorAccentWhite"
        android:textColorHint="@color/colorAccentWhite"
        android:textStyle="italic"
        android:fontFamily="sans-serif-condensed"
        android:textSize="15sp"/>

    <EditText
        android:id="@+id/repeat_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_centerInParent="true"
        android:hint="@string/repeat_password"
        android:textColor="@color/colorAccentWhite"
        android:textColorHint="@color/colorAccentWhite"
        android:textStyle="italic"
        android:fontFamily="sans-serif-condensed"
        android:textSize="15sp"/>

    <CheckBox
        android:id="@+id/checkbox_agreement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/repeat_password"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/checkbox_agreement"
        android:layout_margin="5dp"
        android:text="Jeg godkjenner Pentbrukt's vilkår"
        android:layout_below="@id/repeat_password" />


    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/checkbox_agreement"
        android:layout_centerInParent="true"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/colorAccentWhite"
        android:background="@color/colorAccent"
        android:text="@string/register_button" />

    <TextView
        android:id="@+id/already_registered"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_below="@+id/register_button"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="10dp"
        android:text="@string/already_registered_login"
        android:textColor="@color/colorAccentWhite"
        android:textSize="20sp"
        android:fontFamily="sans-serif-condensed"/>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:srcCompat="@drawable/pentbruk3" />


    <!--<TextView
        android:id="@+id/textPublish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonPublish"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="Heil!"
        android:textSize="20dp" />-->


</RelativeLayout>