<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:padding="80dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:hint="@string/email"
        android:textColor="@color/colorAccentWhite"
        android:textColorHint="@color/colorAccentWhite"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@+id/email"
        android:hint="@string/password"
        android:textColor="@color/colorAccentWhite"
        android:textColorHint="@color/colorAccentWhite"
        android:textStyle="italic" />


    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:text="@string/logg_inn" />

    <!--<TextView
        android:id="@+id/textPublish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonPublish"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="Heil!"
        android:textSize="20dp" />-->


</RelativeLayout>