<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding ="25dp"
    tools:context=".LoginFragment">

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/email"
        android:textColor="@color/colorAccentWhite"
        android:textColorHint="@color/colorAccentWhite"
        android:textSize="15sp"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_centerInParent="true"
        android:fontFamily="sans-serif-condensed"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textColor="@color/colorAccentWhite"
        android:textColorHint="@color/colorAccentWhite"
        android:textSize="15sp"
        android:textStyle="italic" />


    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:background="@color/colorAccent"
        android:fontFamily="sans-serif-medium"
        android:text="@string/logg_inn"
        android:textColor="@color/colorAccentWhite" />

    <TextView
        android:id="@+id/not_registered"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:paddingTop="10dp"
        android:layout_below="@+id/login_button"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/not_registered"
        android:textColor="@color/colorAccentWhite"
        android:textSize="20sp"
        android:focusable="true"
        android:onClick="onClick"
        android:clickable="true"/>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:srcCompat="@drawable/pentbruk3" />


    <!--<TextView
        android:id="@+id/textPublish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonPublish"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="Heil!"
        android:textSize="20dp" />-->


</RelativeLayout>